# meziani-landing

./: .gitignore  docker-compose.yaml  env.example  package-lock.json  package.json
.github/workflows/: main.yml
components/: EmailSignup.tsx
crew/: DOCKERFILE  Dockerfile  Dockerfile.local  check-structure.sh  docker-compose.local.yml  docker-entrypoint.sh  fix-imports.sh  pyproject.toml  requirements.txt  run-local.sh
crew/media_org/: README.md  pyproject.toml
crew/media_org/src/media_org/: crew.py  main.py
crew/podcast/: app.py  pyproject.toml  tools
crew/podcast/src/podcast/: crew.py
crew/podcast/src/podcast/tools/: elevenlabs.py  web_search.py
crew/podcast/static/js/: main.js
crew/podcast/templates/: index.html  podcast.html
crew/src/: app.py
crew/src/media/: crew.py  main.py
crew/src/podcast/: crew.py  main.py
crew/src/podcast/config/: agents.yaml  tasks.yaml
crew/src/podcast/tools/: elevenlabs.py  web_search.py
crew/src/static/css/: styles.css
crew/src/static/js/: main.js
crew/src/templates/: index.html
landing/: DOCKERFILE  Dockerfile  package-lock.json  package.json
landing/app/: layout.tsx  page.tsx
tools/: web_search.py
