[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crew-app"
version = "0.1.0"
description = "CrewAI Application"
requires-python = ">=3.11"
authors = [
    {name = "Yani Meziani", email = "mezianiyani0@gmail.com"},
]

[tool.hatch.build.targets.wheel]
packages = ["src"]