[project]
name = "media_org"
version = "0.1.0"
description = "media-org using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
media_org = "media_org.main:run"
run_crew = "media_org.main:run"
train = "media_org.main:train"
replay = "media_org.main:replay"
test = "media_org.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
